mixedmaildir: don't use 1.5GB of memory when importing a very big folder

Subjobs pile up too fast because they are cheap to create and
because it's taking around 5 event loops for one to start.

BUG: 260647
CCBUG: 317122
CCBUG: 309732
CCBUG: 307066
CCBUG: 295651